# nart

./: Cargo.toml  README.md  flake.nix
shaders/: cursor.wgsl  text.wgsl
src/: main.rs
src/graphics/: buffer.rs  mod.rs  pipeline.rs  renderer.rs
src/graphics/text/: atlas.rs  cursor.rs  mod.rs
src/terminal/: grid.rs  mod.rs  pty.rs
src/ui/: mod.rs  window.rs
