[package]
name = "nart"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.23.0", features = ["derive"] }
cosmic-text = "0.14.2"
env_logger = "0.11.8"
image = { version = "0.25.6", default-features = false, features = [
  "png",
  "rayon",
] }
log = "0.4.27"
nix = { version = "0.30.1", features = ["signal", "fs", "term"] }
pollster = "0.4.0"
rectangle-pack = "0.4.2"
wgpu = "25.0.2"
winit = { version = "0.30.11", features = ["rwh_06"] }
